[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/saw.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Saw.gd" type="Script" id=2]
[ext_resource path="res://Audio/saw.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 1.66667 )

[sub_resource type="Animation" id=2]
resource_name = "Saw"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SawOrigin/Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ), Vector2( 15, 0 ), Vector2( 10, 0 ), Vector2( 15, 0 ), Vector2( 10, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Saw" type="Node2D"]
visible = false
position = Vector2( 50, 50 )
script = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 50, 0 )

[node name="SawOrigin" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="SawOrigin" groups=[
"saw",
]]
position = Vector2( 10, 0 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 32

[node name="Sprite" type="Sprite" parent="SawOrigin/Area2D"]
rotation = 0.785398
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SawOrigin/Area2D"]
position = Vector2( 2, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Saw = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="SawOrigin/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="SawOrigin/Area2D" to="." method="_on_Area2D_body_exited"]
